--- a/abk.sty
+++ b/abk.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat  {LaTeX2e}
-\ProvidesPackage {abk} [2013/08/19 0.3 for abbreviations]
+\ProvidesPackage {abk} [2017/05/07 0.3 for abbreviations]
 \RequirePackage  {xspace, xparse}
 
 %%% Usage
@@ -26,7 +26,7 @@
 %% Generated commands:
 %%   command   output                output starred version (abbreviated since no long form is given)
 %%   \sog      sog.\@\xspace         sog.\@\xspace
-%%   |Sog      Sog.\@\xspace         Sog.\@\xspace
+%%   \Sog      Sog.\@\xspace         Sog.\@\xspace
 %%
 %% Usage:
 %%   Lorem ipsum \zB dolor sit amet ...
